# computational-humor

./: LICENSE  README.md  chumor.py  infoWeb.py  setup.cfg
src/chumor/: infoWeb.py
