[metadata]
name = chumor
version = 0.0.1
author = Farukh S.
author_email = saidmf@rpi.edu
description = A package that runs on text and detects if the intent of humor is present.  
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/F-said/ComputationalHumor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src